--- a/mycon.html
+++ b/mycon.html
@@ -37,7 +37,7 @@
 		<div class="bannerContainer">
 			<img src="b1.jpg" alt="Skyline" style="width:100%" class="responsiveImg">
 			<div class="bottom-left">
-				<div class="add1">
+				<div class="add1 center1">
 					<p><b>CONTACT</b></p>
 				</div>
 			</div>
