--- a/CyberCV.html
+++ b/CyberCV.html
@@ -1,172 +1,188 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <title>Cyber CV 2015 | Project</title>
-    <!-- Stylesheets ------------------------------>
-    <link rel="stylesheet" type="text/css" href="CSS/project.css">
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131912613-1"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
+    <head>
+        <!-- Web page title -->
+        <title>Cyber CV 2015 | Project</title>
 
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131912613-1"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
 
-        gtag('config', 'UA-131912613-1');
-    </script>
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+            gtag('js', new Date());
 
-    <!-- My my mini icon ------------------------------>
-    <link rel="icon" href="spMini.png">
-    <!-- Make the scale of screen to 1 to device ------------------------------>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
-<script type="text/javascript" src="Javascript/Smeetjavascript.js"></script>
-</head>
+            gtag('config', 'UA-131912613-1');
+        </script>
 
-<body>
-    <!-- nav bar ------------------------------>
-    <div class="nav1" id="mynav1">
-        <a href="index.html" class="active"><img src="spw1.png" height="40"></a>
-        <!-- <a href="mycon.html">CONTACT</a> -->
-        <a href="myblog.html">BLOG</a>
-        <a href="mywork.html">MY WORK</a>
-        <a href="aboutme.html">ABOUT ME</a>
-        <a href="javascript:void(0);" style="font-size:15px;" class="menubutton" onclick="myFunction()">&#9776;</a>
-    </div>
-    <br>
-    <!-- banner  ------------------------------>
-    <img src="projects/CyberCV/CyberCvBanner.PNG" alt="dimmu Burger" class="cenBanner">
-    <img src="projects/CyberCV/Cyber CV sqaure banner.png" alt="dimmu Burger" class="cenBannersquare">
-    <div class="sticky">
-        <nav class="shift">
-            <ul>
-                <li><a href="#overview">Overview</a></li>
-                <li><a href="#dev">Development</a></li>
-                <li><a href="#end">End Product</a></li>
-            </ul>
-        </nav>
-        <div class="progress-container">
-            <div class="progress-bar" id="myBar"></div>
+        <!-- My my mini icon ------------------------------>
+        <link rel="icon" href="spMini.png">
+
+        <!-- Stylesheets ------------------------------>
+        <link rel="stylesheet" type="text/css" href="CSS/project.css">
+        <!-- Make the scale of screen to 1 to device ------------------------------>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- using fa-fa icons -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+        <!-- Javascript -->
+        <script type="text/javascript" src="Javascript/Smeetjavascript.js"></script>
+    </head>
+
+    <body>
+        <!-- nav bar ------------------------------>
+        <div class="nav1" id="mynav1">
+            <a href="index.html" class="active"><img src="spw1.png" height="40"></a>
+            <!-- <a href="mycon.html">CONTACT</a> -->
+            <a href="myblog.html">BLOG</a>
+            <a href="mywork.html">MY WORK</a>
+            <a href="aboutme.html">ABOUT ME</a>
+            <a href="javascript:void(0);" style="font-size:15px;" class="menubutton" onclick="myFunction()">&#9776;</a>
         </div>
-    </div>
-    <span id="overview"></span>
-    <br>
-    <div class="centerWrap">
-        <!-- project link button -->
-        <a id="butproto" href="https://smeet-patel.github.io/Cyber-CV.-Where-do-yourself-in-3-years--My-website-"
-            target="_blank">View My Cyber CV (2015)</a><br>
-            <a id="gitbutton" href="https://github.com/smeet-patel/Cyber-CV.-Where-do-yourself-in-3-years--My-website-" target="_blank"><i class="fa">&#xf09b;</i>
+        <br>
+
+        <!-- banner  ------------------------------>
+        <img src="projects/CyberCV/CyberCvBanner.PNG" alt="dimmu Burger" class="cenBanner">
+        <img src="projects/CyberCV/Cyber CV sqaure banner.png" alt="dimmu Burger" class="cenBannersquare">
+
+        <!-- Sticky Nav bar with progress bar -->
+        <div class="sticky">
+            <nav class="shift">
+                <ul>
+                    <li><a href="#overview">Overview</a></li>
+                    <li><a href="#dev">Development</a></li>
+                    <li><a href="#end">End Product</a></li>
+                </ul>
+            </nav>
+            <div class="progress-container">
+                <div class="progress-bar" id="myBar"></div>
+            </div>
+        </div>
+        <span id="overview"></span>
+        <br>
+
+        <!-- Web page content -->
+        <div class="centerWrap">
+
+            <!-- project link button -->
+            <a id="butproto" href="https://smeet-patel.github.io/Cyber-CV.-Where-do-yourself-in-3-years--My-website-"
+                target="_blank">View My Cyber CV (2015)</a><br>
+            <a id="gitbutton" href="https://github.com/smeet-patel/Cyber-CV.-Where-do-yourself-in-3-years--My-website-"
+                target="_blank"><i class="fa">&#xf09b;</i>
                 Open Project on GitHub (Source Code)</a><br>
-        <p>As a requirement of an Information System 101 course in 2015 at Victoria University of Wellington, we were
-            tasked to developed a
-            Cyber CV using basic
-            HTML and CSS. We were asked, 'Where do you see yourself in 3 years' time?'</p>
-        <p>For this project, the objective was to use the proper HTML structure with the DOCTYPE, HEAD, body tag
-            and nesting tags. I was also required to use external CSS page, use of lists, a navigation
-            bar which redirects to other HTML pages, embed a video and display images. </p>
-        <h2>Requirements: </h2>
-        <li id="pb">Personal statement on the index page.</li>
-        <li id="pb">Interest and hobbies section.</li>
-        <li id="pb">Education and Fictional qualification section.</li>
-        <li id="pb">Fictional contact details and reference. </li>
-        <h3 style="color: orange">Personal objective:</h3>
-        <span id="dev"></span>
-        <li id="pb">Make a minimalistic and professional looking website.</li>
-        <li id="pb">Make a website which represents me.</li>
-    </div>
 
-    <!-- personas ------------------------------>
-    <div class="centerWrap">
-        <h1 class="w">Development</h1>
-        <h3 style="color: orange">Phase 1 planning the Website </h3>
-        <p><b>Colour:</b> It would not make sense if I didn't use my favourite colour. Greenery (brighter tone of
-            green),
-            is often associated with nature and has a relaxation effect. <br>My accent colour was a lighter tone of
-            blue because it appears to be a colour which does not only look professional but sets a calmness and people
-            trust the colour in a business sense. <br>For the text, I used Black and light grey for the background to
-            make the blue and green stand out. </p>
-        <p><b>Font:</b> I used Myriad Pro which is a sans serif font because it both readable in all font sizes and
-            appears to be contemporary. </p>
-        <p><b>Design:</b> I choose to make a minimalistic and user friendly Cyber CV.</p>
-        <div class="hoverOverImage">
-            <img src="projects/CyberCV/cv1.png" alt="Home page of my Cyber CV" class="hoverOverImage-layer_bottom" id="conner_round"
-                style="width:100%">
-            <div class="hoverOverImage-layer_top">
-                <div class="hoverOverImage-text">Home page of my Cyber CV 2015, with the minimalistic UI.</div>
-            </div>
+            <!-- Intro -->
+            <p>As a requirement of an Information System 101 course in 2015 at Victoria University of Wellington, we were
+                tasked to developed a
+                Cyber CV using basic
+                HTML and CSS. We were asked, 'Where do you see yourself in 3 years' time?'</p>
+            <p>For this project, the objective was to use the proper HTML structure with the DOCTYPE, HEAD, body tag
+                and nesting tags. I was also required to use external CSS page, use of lists, a navigation
+                bar which redirects to other HTML pages, embed a video and display images. </p>
+            <h2>Requirements: </h2>
+            <li id="pb">Personal statement on the index page.</li>
+            <li id="pb">Interest and hobbies section.</li>
+            <li id="pb">Education and Fictional qualification section.</li>
+            <li id="pb">Fictional contact details and reference. </li>
+            <h3 style="color: orange">Personal objective:</h3>
+            <span id="dev"></span>
+            <li id="pb">Make a minimalistic and professional looking website.</li>
+            <li id="pb">Make a website which represents me.</li>
         </div>
-        <p>Index Page with a minimalistic UI with green primary colour. </p>
 
-        <p>As a part of the course we had been provided with workshop guides which made it relatively straightforward
-            to develop the website. I had done web development previously but was for basic school projects. </p>
-        <h4>Challenges: </h4>
-        <li>The navigation bar with image person icon was a challenge to get it aligned with the other elements.
-            Learning how to use an external CSS file for styling was a challenge. </li>
-        <li>For the project, We used Notepad++ as a text editor that had limited capabilities compared Visual Stuiod
-            code. <span id="end"></span>Checking for correct nesting proved to be difficult, and I often did not close
-            tags, which was
-            causing problems. </li>
-
-        <h1 class="w">End Product</h1>
-        <p style="color: red"><b>Note that some of the information is fictional and not real. (For example my contact
-                details and work Experience at New World and Xero)</b></p>
-        <div class="hoverOverImage">
-            <img src="projects/CyberCV/cv1.png" alt="Home page of my Cyber CV" class="hoverOverImage-layer_bottom" id="conner_round"
-                style="width:100%">
-            <div class="hoverOverImage-layer_top">
-                <div class="hoverOverImage-text">Home page of my Cyber CV 2015</div>
+        <!-- Development section ------------------------------>
+        <div class="centerWrap">
+            <h1 class="w">Development</h1>
+            <h3 style="color: orange">Phase 1 planning the Website </h3>
+            <p><b>Colour:</b> It would not make sense if I didn't use my favourite colour. Greenery (brighter tone of
+                green),
+                is often associated with nature and has a relaxation effect. <br>My accent colour was a lighter tone of
+                blue because it appears to be a colour which does not only look professional but sets a calmness and people
+                trust the colour in a business sense. <br>For the text, I used Black and light grey for the background to
+                make the blue and green stand out. </p>
+            <p><b>Font:</b> I used Myriad Pro which is a sans serif font because it both readable in all font sizes and
+                appears to be contemporary. </p>
+            <p><b>Design:</b> I choose to make a minimalistic and user friendly Cyber CV.</p>
+            <div class="hoverOverImage">
+                <img src="projects/CyberCV/cv1.png" alt="Home page of my Cyber CV" class="hoverOverImage-layer_bottom" id="conner_round"
+                    style="width:100%">
+                <div class="hoverOverImage-layer_top">
+                    <div class="hoverOverImage-text">Home page of my Cyber CV 2015, with the minimalistic UI.</div>
+                </div>
             </div>
-        </div>
-        <p>Index Page</p>
-        <div class="hoverOverImage">
-            <img src="projects/CyberCV/cv2.png" alt="Achievements and qualification (my Cyber CV 2015)" class="hoverOverImage-layer_bottom"
-                id="conner_round" style="width:100%">
-            <div class="hoverOverImage-layer_top">
-                <div class="hoverOverImage-text">Achievements and qualification (my Cyber CV 2015)</div>
+            <p>Index Page with a minimalistic UI with green primary colour. </p>
+            <p>As a part of the course we had been provided with workshop guides which made it relatively straightforward
+                to develop the website. I had done web development previously but was for basic school projects. </p>
+            <h4>Challenges: </h4>
+            <li>The navigation bar with image person icon was a challenge to get it aligned with the other elements.
+                Learning how to use an external CSS file for styling was a challenge. </li>
+            <li>For the project, We used Notepad++ as a text editor that had limited capabilities compared Visual Stuiod
+                code. <span id="end"></span>Checking for correct nesting proved to be difficult, and I often did not close
+                tags, which was
+                causing problems. </li>
+            
+            <!-- Image and caption of the project -->
+            <h1 class="w">End Product</h1>
+            <p style="color: red"><b>Note that some of the information is fictional and not real. (For example my contact
+                    details and work Experience at New World and Xero)</b></p>
+            <div class="hoverOverImage">
+                <img src="projects/CyberCV/cv1.png" alt="Home page of my Cyber CV" class="hoverOverImage-layer_bottom" id="conner_round"
+                    style="width:100%">
+                <div class="hoverOverImage-layer_top">
+                    <div class="hoverOverImage-text">Home page of my Cyber CV 2015</div>
+                </div>
             </div>
-        </div>
-        <p>Achievements Page</p>
-        <div class="hoverOverImage">
-            <img src="projects/CyberCV/cv3.png" alt="Work Experience and Education (MY Cyber CV 2015)" class="hoverOverImage-layer_bottom"
-                id="conner_round" style="width:100%">
-            <div class="hoverOverImage-layer_top">
-                <div class="hoverOverImage-text">Work Experience and Education (MY Cyber CV 2015)</div>
+            <p>Index Page</p>
+            <div class="hoverOverImage">
+                <img src="projects/CyberCV/cv2.png" alt="Achievements and qualification (my Cyber CV 2015)" class="hoverOverImage-layer_bottom"
+                    id="conner_round" style="width:100%">
+                <div class="hoverOverImage-layer_top">
+                    <div class="hoverOverImage-text">Achievements and qualification (my Cyber CV 2015)</div>
+                </div>
             </div>
-        </div>
-        <p style="color: red"><b>Note that some of the information is fictional and not real. (For example my contact
-                details and work Experience at New World and Xero)</b></p>
-        <p>Work Experience Page</p>
-        <div class="hoverOverImage">
-            <img src="projects/CyberCV/cv4.png" alt="Interest & hobbies + reference (My CYBER CV 2015)" class="hoverOverImage-layer_bottom"
-                id="conner_round" style="width:100%">
-            <div class="hoverOverImage-layer_top">
-                <div class="hoverOverImage-text">Interest & hobbies + reference (My CYBER CV 2015)</div>
+            <p>Achievements Page</p>
+            <div class="hoverOverImage">
+                <img src="projects/CyberCV/cv3.png" alt="Work Experience and Education (MY Cyber CV 2015)" class="hoverOverImage-layer_bottom"
+                    id="conner_round" style="width:100%">
+                <div class="hoverOverImage-layer_top">
+                    <div class="hoverOverImage-text">Work Experience and Education (MY Cyber CV 2015)</div>
+                </div>
             </div>
-        </div>
-        <p>Interest and Hobbies Page</p>
-        <a id="butproto" href="https://smeet-patel.github.io/Cyber-CV.-Where-do-yourself-in-3-years--My-website-"
-            target="_blank">View
-            My Cyber CV (2015)</a>
+            <p style="color: red"><b>Note that some of the information is fictional and not real. (For example my contact
+                    details and work Experience at New World and Xero)</b></p>
+            <p>Work Experience Page</p>
+            <div class="hoverOverImage">
+                <img src="projects/CyberCV/cv4.png" alt="Interest & hobbies + reference (My CYBER CV 2015)" class="hoverOverImage-layer_bottom"
+                    id="conner_round" style="width:100%">
+                <div class="hoverOverImage-layer_top">
+                    <div class="hoverOverImage-text">Interest & hobbies + reference (My CYBER CV 2015)</div>
+                </div>
+            </div>
+            <p>Interest and Hobbies Page</p>
+            <a id="butproto" href="https://smeet-patel.github.io/Cyber-CV.-Where-do-yourself-in-3-years--My-website-"
+                target="_blank">View
+                My Cyber CV (2015)</a>
             <br>
-            <a id="gitbutton" href="https://github.com/smeet-patel/Cyber-CV.-Where-do-yourself-in-3-years--My-website-" target="_blank"><i class="fa">&#xf09b;</i>
+            <a id="gitbutton" href="https://github.com/smeet-patel/Cyber-CV.-Where-do-yourself-in-3-years--My-website-"
+                target="_blank"><i class="fa">&#xf09b;</i>
                 Open Project on GitHub (Source Code)</a><br>
-    </div>
-
-    <br>
-    <!-- footer ------------------------------>
-    <footer class="footer">
-        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet" />
-        <div class="container text-center">
-            <a href="https://www.linkedin.com/in/smeet-patel-/"><i class="fa fa-linkedin-square"></i></a>
-            <a href="https://github.com/smeet-patel"><i class="fa fa-github"></i></a>
-            <a href="mailto:smeetprpatel@gmail.com?Subject=Mail%20from%20Website" target="_top"><i class="fa fa-envelope"></i></a>
-            <a href="https://goo.gl/maps/fReyXVpdCDB2"><i class="fa fa-map-marker"></i></a>
         </div>
-    </footer>
-</body>
+        <br>
+
+        <!-- footer ------------------------------>
+        <footer class="footer">
+            <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet" />
+            <div class="container text-center">
+                <a href="https://www.linkedin.com/in/smeet-patel-/"><i class="fa fa-linkedin-square"></i></a>
+                <a href="https://github.com/smeet-patel"><i class="fa fa-github"></i></a>
+                <a href="mailto:smeetprpatel@gmail.com?Subject=Mail%20from%20Website" target="_top"><i class="fa fa-envelope"></i></a>
+                <a href="https://goo.gl/maps/fReyXVpdCDB2"><i class="fa fa-map-marker"></i></a>
+            </div>
+        </footer>
+
+    </body>
 
 </html>
