--- a/Vkfansite.html
+++ b/Vkfansite.html
@@ -12,15 +12,17 @@
 
     gtag('config', 'UA-131912613-1');
     </script>
+    
     <!-- Stylesheets ------------------------------>
     <link rel="stylesheet" type="text/css" href="CSS/project.css">
-    <!-- My my mini icon ------------------------------>
-    <link rel="icon" href="spMini.png">
     <!-- Make the scale of screen to 1 to device ------------------------------>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
-<script type="text/javascript" src="Javascript/Smeetjavascript.js"></script>
+    <!-- My my mini icon ------------------------------>
+    <link rel="icon" href="spMini.png">
+    
+    <!-- Javascript -->
+    <script type="text/javascript" src="Javascript/Smeetjavascript.js"></script>
 </head>
 
 <body>
@@ -34,9 +36,12 @@
         <a href="javascript:void(0);" style="font-size:15px;" class="menubutton" onclick="myFunction()">&#9776;</a>
     </div>
     <br>
+
     <!-- banner  ------------------------------>
     <img src="projects/fansite/vkbanner.PNG" alt="dimmu Burger" class="cenBanner">
     <img src="projects/fansite/Vk square banner.png" alt="dimmu Burger" class="cenBannersquare">
+
+    <!-- Sticky Nav bar -->
     <div class="sticky">
         <!-- <div class="mar"></div> -->
         <nav class="shift">
@@ -51,6 +56,7 @@
             <div class="progress-bar" id="myBar"></div>
         </div>
     </div>
+
     <div class="centerWrap">
         <!-- project link button -->
         <a id="butproto" href="http://smeet-patel.com/Fan-Site-VK/" target="_blank">View
@@ -71,8 +77,8 @@
         <li>Using different position property </li>
         <li>Creating and styling Table with colspan and rowspan</li>
         <li>Using email and phone external links</li>
-
     </div>
+
     <!-- personas ------------------------------>
     <div class="centerWrap">
         <h1 class="w">Challenges & Solution</h1>
