--- a/Launchpadreview.html
+++ b/Launchpadreview.html
@@ -20,8 +20,9 @@
     <!-- Make the scale of screen to 1 to device ------------------------------>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
-<script type="text/javascript" src="Javascript/Smeetjavascript.js"></script>
+
+    <!-- javascript -->
+    <script type="text/javascript" src="Javascript/Smeetjavascript.js"></script>
 </head>
 
 <body>
@@ -35,7 +36,9 @@
         <a href="javascript:void(0);" style="font-size:15px;" class="menubutton" onclick="myFunction()">&#9776;</a>
     </div>
     <img src="Webimages/Launchpad_logo.png" alt="dimmu Burger" class="cenBanner" style="width: 30%" id="summary">
-    <!-- Contact me buttons ------------------------------>
+
+
+    <!-- Sticky Banner ------------------------------>
     <div class="sticky">
         <!-- <div class="mar"></div> -->
         <nav class="shift">
@@ -51,10 +54,13 @@
         </div>
     </div>
     <div class="centerWrap">
+        <!-- title -->
         <h1 class="w">Agile UX Designer Influence </h1>
         <h2 style="font-weight: 400">Critical Review for <u>‘Launchpad's Quest for A Better and Agile User Interface’</u>
             by <b>Martin Albisetti</b>
         </h2>
+
+        <!-- review of the artical -->
         <p>The integration of agile development for UX design has been a popular topic for software development for the
             last decade due to the profound implications and success of agile development in the IT industry. The role
             of the UX designer has often been overlooked in agile development projects because of the standard
