--- a/everest.html
+++ b/everest.html
@@ -6,29 +6,33 @@
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-131912613-1"></script>
 	<script>
-	window.dataLayer = window.dataLayer || [];
+		window.dataLayer = window.dataLayer || [];
 	function gtag(){dataLayer.push(arguments);}
 	gtag('js', new Date());
 
 	gtag('config', 'UA-131912613-1');
 	</script>
 
-	<!-- Stylesheets ------------------------------>
-	<link rel="stylesheet" type="text/css" href="CSS/project.css">
 	<!-- My my mini icon ------------------------------>
 	<link rel="icon" href="spMini.png">
+
+	<!-- Stylesheets ------------------------------>
+	<link rel="stylesheet" type="text/css" href="CSS/project.css">
 	<!-- Make the scale of screen to 1 to device ------------------------------>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-</head>
-<script type="text/javascript" src="Javascript/Smeetjavascript.js"></script>
-
-<body>
 	<style>
-		body {
-			background-color: #fbfbfb;
-		}
+	body {
+		background-color: #fbfbfb;
+	}
 	</style>
+
+	<!-- Javascript -->
+	<script type="text/javascript" src="Javascript/Smeetjavascript.js"></script>
+
+</head>
+<body>
+
 	<!-- nav bar ------------------------------>
 	<div class="nav1" id="mynav1">
 		<a href="index.html" class="active"><img src="spw1.png" height="40"></a>
@@ -39,9 +43,12 @@
 		<a href="javascript:void(0);" style="font-size:15px;" class="menubutton" onclick="myFunction()">&#9776;</a>
 	</div>
 	<br>
+
 	<!-- banner  ------------------------------>
 	<img src="projects/everest/everestBanner.PNG" alt="dimmu Burger" class="cenBanner">
 	<img src="projects/everest/Everest square banner.png" alt="dimmu Burger" class="cenBannersquare">
+
+	<!-- sticky nav bar -->
 	<div class="sticky">
 		<nav class="shift">
 			<ul>
@@ -58,9 +65,11 @@
 	<span id="overview"></span>
 	<br>
 	<div class="centerWrap">
+
 		<!-- project link button -->
 		<a id="gitbutton" href="https://github.com/smeet-patel/oneWeb-browser-V-Everest" target="_blank"><i class="fa">&#xf09b;</i>
 			Open Project on GitHub (Source Code)</a>
+		<!-- content -->
 		<p>Everest brings you all the necessary features of a web browser which only one could imagine. Everest is a web
 			browser for all Android devices which simplifies and enhances the web browsing experience.</p>
 		<p>Everest is my third android application which I have developed to build on my knowledge and thought it would be
@@ -68,14 +77,15 @@
 			work (web content/ website). </p>
 		<h3 style="color: orange">Brief Overview of my Android Development Journey (projects)</h3>
 		<p>My first Android application was a string to the binary converter which allows the user to input string do words
-			and on submit the application will display the binary number for each word individually. 
+			and on submit the application will display the binary number for each word individually.
 			<!-- This application had one single constrain layout with basic function with edit view, text view and buttons. -->
 		</p>
-		<p>My second application was a number guessing game, in which user guesses the correct random number and they would be
+		<p>My second application was a number guessing game, in which user guesses the correct random number and they would
+			be
 			redirected to another activity if the guess is correct. It wouldn’t be right to call this a game without an element
-			of gamification, so I also implemented a scoring system and hints to improve usability. 
+			of gamification, so I also implemented a scoring system and hints to improve usability.
 			<!-- the high and lower guesses would also be displayed on the screen. -->
-			 For this application I learnt advantages of linear layout and how to
+			For this application I learnt advantages of linear layout and how to
 			<span id="faq"></span>save the UI state with ‘onSaveInstance’ and how to prevent losing information when the screen
 			is rotated. </p>
 		<h1 class="w">Features (Getting Started FAQ)</h1>
@@ -209,16 +219,19 @@
 		<h1 class="w">reflection</h1>
 		<p>Overall, I gained a comprehensive understanding of the WebView class, Android App bar with a search bar, intents,
 			layouts, listeners, custom list and layout versus activity. I am very pleased with this project and without a doubt
-			this has been one of my greatest challenges from an IT perspective. Even after several months, I am using this as my main web browser on my
+			this has been one of my greatest challenges from an IT perspective. Even after several months, I am using this as my
+			main web browser on my
 			smartphone, this because it is user friendly, has a aesthetically pleasing effect and simple UI as of the fully
-			integrated app bar. 
+			integrated app bar.
 			<!-- One thing I forgot to implement was a print function to print the content of the WebView which I came across reading for another Android project. -->
-			 I one day hope to be a successful mobile application developer and create application that one could only imagine and makes our life’s easier. </p>
+			I one day hope to be a successful mobile application developer and create application that one could only imagine
+			and makes our life’s easier. </p>
 		<hr>
 		<a id="gitbutton" href="https://github.com/smeet-patel/oneWeb-browser-V-Everest" target="_blank"><i class="fa">&#xf09b;</i>
 			Open Project on GitHub (Source Code)</a>
 	</div>
 	<br>
+	
 	<!-- footer ------------------------------>
 	<footer class="footer">
 		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" rel="stylesheet" />
