--- a/hackathon.html
+++ b/hackathon.html
@@ -12,6 +12,7 @@
 
 	gtag('config', 'UA-131912613-1');
 	</script>
+
 	<!-- Stylesheets ------------------------------>
 	<link rel="stylesheet" type="text/css" href="CSS/project.css">
 	<!-- My my mini icon ------------------------------>
@@ -19,8 +20,10 @@
 	<!-- Make the scale of screen to 1 to device ------------------------------>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+	<!-- javascript -->
+	<script type="text/javascript" src="Javascript/Smeetjavascript.js"></script>
 </head>
-<script type="text/javascript" src="Javascript/Smeetjavascript.js"></script>
 
 <body>
 	<!-- nav bar ------------------------------>
@@ -36,6 +39,7 @@
 	<!-- banner  ------------------------------>
 	<img src="projects/Hackathon/hackathonbanner.PNG" alt="dimmu Burger" class="cenBanner">
 	<img src="projects/Hackathon/hackathon square banner.png" alt="dimmu Burger" class="cenBannersquare">
+	<!-- sticky nav -->
 	<div class="sticky">
 		<nav class="shift">
 			<ul>
