--- a/aboutme.html
+++ b/aboutme.html
@@ -13,6 +13,7 @@
     gtag('config', 'UA-131912613-1');
     </script>
 
+    <!-- javascript -->
     <link rel="stylesheet" type="text/css" href="CSS/project.css">
     <link rel="stylesheet" type="text/css" href="CSS/style1.css">
     <!-- My my mini icon ------------------------------>
@@ -23,7 +24,7 @@
 </head>
 
 <body>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- nav bar -->
     <div class="nav1" id="mynav1">
         <a href="index.html" class="active"><img src="spw1.png" height="40" id="conner_round"></a>
         <!-- <a href="mycon.html">CONTACT</a> -->
