Adding Home title to log when hovered on

--- a/centralPolice.html
+++ b/centralPolice.html
@@ -30,7 +30,7 @@
     <body>
         <!-- nav bar ------------------------------>
         <div class="nav1" id="mynav1">
-            <a href="index.html" class="active"><img src="spw1.png" height="40"></a>
+            <a href="index.html" class="active" title="Home"><img src="spw1.png" height="40"></a>
             <!-- <a href="mycon.html">CONTACT</a> -->
             <a href="myblog.html">BLOG</a>
             <a href="mywork.html">MY WORK</a>
