--- a/2Shakes.html
+++ b/2Shakes.html
@@ -28,6 +28,7 @@
     <!-- nav bar ------------------------------>
     <div class="nav1" id="mynav1">
         <a href="index.html" class="active" title="Home"><img src="spw1.png" height="40"></a>
+        <!-- home button beside logo or float all left -->
         <!-- <a href="mycon.html">CONTACT</a> -->
         <a href="myblog.html">BLOG</a>
         <a href="mywork.html">MY WORK</a>
