--- a/index.html
+++ b/index.html
@@ -39,12 +39,11 @@
     <!---------------------------------------------------------->
     <!-- Index Page Banner ------------------------------------->
     <br>
-    <img src="Webimages/mybanner4.PNG" alt="Smeet" class="cenBanner">
+    <img src="Webimages/SmeetBanner2019.png" alt="Smeet" class="cenBanner">
     <img src="Webimages/myAvatar.jpg" alt="Smeet" class="cenBanner1">
     <p align="center" class="centText" style="color: #0F78C3">Hello! My name is <b><em>Smeet</em></b>.</p>
     <p class="centText" align="center">
-        Being an aspiring software developer and keen adventurer, I am passionate about web and mobile development. 
-        I believe solutions should reflect innovation of the modern day.
+        I am passionate about technology and how it can be used to create solve business issues. I also enjoy coding, doing DIY projects and going on adventures which can be followed on my blog.
         <!-- Being an aspiring software developer, I am passionate about web and mobile development. I like to bring
         innovation and change together. -->
 
