--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <div class="stickrow">projects + Blog</div>
     </div>
     <hr>
+    <a href="form2.html"><i class="fa fa-github"></i></a>
     <!-- Index Page sports titles ------------------------------>
     <div class="centerWrap">
         <!--Centering everything in the div-->
