--- a/form2.html
+++ b/form2.html
@@ -1,25 +1,36 @@
-<!-- form.html -->
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-	<meta charset="utf-8">
-	<title>Form</title>
-	<script src="https://www.google.com/recaptcha/api.js" async defer></script>
-	<script>
-		function captchaSubmit(data) {
-			document.getElementById("contact").submit();
-		}
-	</script>
-	<style>
-		.grecaptcha-badge {display: none;}
-	</style>
+<script>
+  function onSubmit(token) {
+    alert('thanks ' + document.getElementById('field').value);
+  }
+
+  function validate(event) {
+    event.preventDefault();
+    if (!document.getElementById('field').value) {
+      alert("You must add text to the required field");
+    } else {
+      grecaptcha.execute();
+      alert("done");
+    }
+  }
+
+  function onload() {
+    var element = document.getElementById('submit');
+    element.onclick = validate;
+  }
+</script>
+<script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 <body>
-	<form id="contact" action="results.php" method="post">
-		<label>First <input type="text" name="first"></label><br>
-		<label>Last <input type="text" name="last"></label><br>
-		<button class="g-recaptcha" data-sitekey="6LdC_68UAAAAABjHte1TAvzY8j4HHYgZ05anCyaE" data-callback="captchaSubmit" data-badge="inline">Submit</button>
-		<p>Please note this form is protected by reCaptcha.</p>
-	</form>
+   <form>
+     Name: (required) <input id="field" name="field">
+     <div id='recaptcha' class="g-recaptcha"
+          data-sitekey="6LdC_68UAAAAABjHte1TAvzY8j4HHYgZ05anCyaE"
+          data-callback="onSubmit"
+          data-size="invisible"></div>
+     <button id='submit'>submit</button>
+   </form>
+<script>onload();</script>
 </body>
 </html>
