--- a/form2.html
+++ b/form2.html
@@ -11,8 +11,8 @@
       alert("You must add text to the required field");
     } else {
       grecaptcha.execute();
-      alert("done");
     }
+    // alert("new");
   }
 
   function onload() {
