--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     <!---------------------------------------------------------->
     <!-- Index Page Banner ------------------------------------->
     <br>
-    <img src="Webimages/SmeetBanner2019.png" alt="Smeet" class="cenBanner">
-    <img src="Webimages/myAvatar.jpg" alt="Smeet" class="cenBanner1">
+    <img src="Webimages/business banner.png" alt="Smeet" class="cenBanner">
+    <img src="Webimages/smeet.png" alt="Smeet" class="cenBanner1">
     <p align="center" class="centText" style="color: #0F78C3">Hello! My name is <b><em>Smeet</em></b>.</p>
     <p class="centText" align="center">
         I am passionate about technology and how it can be used to create solve business issues. I also enjoy coding, doing DIY projects and going on adventures which can be followed on my blog.
@@ -55,7 +55,6 @@
         <div class="stickrow">projects + Blog</div>
     </div>
     <hr>
-    <a href="form2.html"><i class="fa fa-github"></i></a>
     <!-- Index Page sports titles ------------------------------>
     <div class="centerWrap">
         <!--Centering everything in the div-->
